Create new background design for all pages
Alterations mainly to the CSS documents and also minor additions to the
HTML documents for all site pages were added. These alterations create
a new background design and add a new class named "background".

--- a/recipes/stuffed-chicken-breast.css
+++ b/recipes/stuffed-chicken-breast.css
@@ -1,5 +1,9 @@
 body {
     background-color: lightskyblue;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 10px;
 }
 
 h1 {
@@ -17,11 +21,26 @@ p {
     font-size: 30px;
 }
 
-div {
+li {
+    margin: 20px;
+}
+
+.photo {
     display: flex;
     justify-content: center;
     align-items: center;
     margin: 10px;
+}
+
+.background {
+    border-radius: 17%;
+    display: column;
+    justify-content: center;
+    text-align: center;
+    padding: 40px;
+    margin: 50px;
+    width: 80vw;
+    background-color: blanchedalmond;
 }
 
 .lists {
