--- a/recipes/lobster-bisque.css
+++ b/recipes/lobster-bisque.css
@@ -1,5 +1,7 @@
 body {
+    display: flex;
     background-color: lightskyblue;
+    justify-content: center;
 }
 
 h1 {
@@ -17,11 +19,26 @@ p {
     font-size: 30px;
 }
 
-div {
+li {
+    margin: 20px;
+}
+
+.photo {
     display: flex;
     justify-content: center;
     align-items: center;
     margin: 10px;
+}
+
+.background {
+    border-radius: 17%;
+    display: column;
+    justify-content: center;
+    text-align: center;
+    padding: 40px;
+    margin: 50px;
+    width: 80vw;
+    background-color: blanchedalmond;
 }
 
 .lists {
