--- a/style.css
+++ b/style.css
@@ -6,7 +6,19 @@ body {
     margin: 10px;
 }
 
+img {
+    width: auto;
+    max-width: 100%;
+    height: auto;
+    max-height: 100%;
+}
+
 h1 {
+    display: inline-block;
+    background-color: plum;
+    border-radius: 50px 2px;
+    border: 2px solid black;
+    padding: 15px;
     text-decoration: underline black;
     font-size: 42px;
     text-align: center;
@@ -38,6 +50,10 @@ ul {
     list-style-type: none;
     font-size: 36px;
     font-family: "Snell Roundhand", "cursive"
+}
+
+h1:hover {
+    background-color: palevioletred;
 }
 
 a:link {
