--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ img {
 }
 
 h1 {
-    display: inline-block;
+    display: inline-flex;
     background-color: plum;
     border-radius: 50px 2px;
     border: 2px solid black;
