--- a/recipes/croque-madame.css
+++ b/recipes/croque-madame.css
@@ -5,6 +5,11 @@ body {
 }
 
 h1 {
+    display: inline-flex;
+    background-color: plum;
+    border-radius: 50px 2px;
+    border: 2px solid black;
+    padding: 15px;
     text-decoration: underline black;
     font-size: 42px;
     text-align: center;
@@ -31,7 +36,10 @@ li {
 }
 
 .background {
-    border-radius: 17%;
+    border-top-left-radius: 500px;
+    border-top-right-radius: 500px;
+    border-bottom-left-radius: 380px;
+    border-bottom-right-radius: 380px;
     display: column;
     justify-content: center;
     text-align: center;
@@ -71,6 +79,10 @@ li {
     text-align: center;
     font-size: 24px;
     font-family: cursive;
+}
+
+h1:hover {
+    background-color: palevioletred;
 }
 
 a:link {
