--- a/recipes/stuffed-chicken-breast.css
+++ b/recipes/stuffed-chicken-breast.css
@@ -20,6 +20,13 @@ h1 {
     font-family: "Snell Roundhand", "cursive";
 }
 
+img {
+    width: auto;
+    max-width: 100%;
+    height: auto;
+    max-height: 100%;
+}
+
 p {
     margin: 40px;
     text-align: center;
