--- a/recipes/stuffed-chicken-breast.css
+++ b/recipes/stuffed-chicken-breast.css
@@ -14,7 +14,6 @@ h1 {
     padding: 15px;
     display: inline-flex;
     text-decoration: underline black;
-    font-size: 42px;
     text-align: center;
     color: black;
     font-family: "Snell Roundhand", "cursive";
@@ -36,6 +35,10 @@ p {
 
 li {
     margin: 20px;
+}
+
+.heading {
+    font-size: clamp(.67rem, 2vw, 2vw);
 }
 
 .photo {
