--- a/recipes/stuffed-chicken-breast.css
+++ b/recipes/stuffed-chicken-breast.css
@@ -12,7 +12,6 @@ h1 {
     border-radius: 50px 2px;
     border: 2px solid black;
     padding: 15px;
-    display: inline-flex;
     text-decoration: underline black;
     text-align: center;
     color: black;
@@ -30,7 +29,7 @@ p {
     margin: 40px;
     text-align: center;
     font-family: cursive;
-    font-size: 30px;
+    font-size: clamp(.6rem, 2vw, 2vw);
 }
 
 li {
